--- a/loki/templates/configmap.yaml
+++ b/loki/templates/configmap.yaml
@@ -5,58 +5,4 @@ metadata:
   labels:
     {{- include "labels" . | nindent 4 }}
 data:
-  loki.yaml: |2
-    auth_enabled: false
-
-    analytics:
-      reporting_enabled: false
-
-    server:
-      http_listen_port: 3100
-
-    common:
-      path_prefix: /loki
-      replication_factor: {{ .Values.replicas }}
-      storage:
-        s3:
-          s3forcepathstyle: false
-          bucketnames: ${S3_BUCKET}
-          endpoint: ${S3_ENDPOINT}
-          region: ${S3_REGION}
-          access_key_id: ${S3_ACCESS_KEY}
-          secret_access_key: ${S3_SECRET_KEY}
-      ring:
-        kvstore:
-          store: memberlist
-    
-    memberlist:
-      join_members:
-        - dnssrv+loki.{{ .Release.Namespace }}.svc.cluster.local:7946
-
-    limits_config:
-      allow_structured_metadata: true
-      max_cache_freshness_per_query: 10m
-      query_timeout: 300s
-      reject_old_samples: true
-      reject_old_samples_max_age: 168h
-      retention_period: 672h # 28 days
-      split_queries_by_interval: 15m
-      volume_enabled: true
-
-    pattern_ingester:
-      enabled: true
-
-    compactor:
-      retention_enabled: true
-      delete_request_store: s3
-
-    schema_config:
-      configs:
-        - from: 2025-01-21
-          store: tsdb
-          object_store: s3
-          schema: v13
-          index:
-            prefix: index_
-            period: 24h
-  
+  loki.yaml: {{ include "config" . | nindent 4 }}
